--- a/sass/templates/_cases.sass
+++ b/sass/templates/_cases.sass
@@ -1,49 +1,59 @@
-.types
+.cases
   width: 100%
   background-color: $light
   display: flex
   flex-direction: row
+  align-items: center
   justify-content: center
-  padding-bottom: 5rem
+  &__section
+    padding: 0
+    margin: 0
+    padding-top: 7rem
   &__container
     display: flex
     flex-direction: column
     align-items: center
+  &__title
+    margin: 0
+    padding: 0
+    font-family: 'Ubuntu', serif
+    font-weight: 700
+    font-size: 2.625rem
+    letter-spacing: normal
+    word-spacing: normal
+    line-height: 2.3321rem
+    color: #2c2c2d
+    &__text
+      width: 100%
+      max-width: 50rem
+      margin: 0
+      padding: 0
+      padding-top: 1.7rem
+      padding-bottom: 2.7rem
+      font-family: 'Ubuntu', serif
+      font-weight: 400
+      font-size: 1rem
+      letter-spacing: normal
+      word-spacing: normal
+      line-height: 1.375rem
+      text-align: center
+      color: #2c2c2d
 
-  &__section-title
-    margin-bottom: 2.214rem
+  &__slider
+    width: 100%
+    max-width: 69.4375rem
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    align-items: center
+    padding-bottom: 3rem
+    &__button
+      width: 1.4375rem
+      height: 2.6875rem
+    &__image
+      &__container
+        width: 100%
+        height: 100%
+        max-width: 60.375rem
+        max-height: 31.625rem
 
-
-.card
-  &__image
-    max-width: 392px
-    max-height: 421px
-    &--mobile
-      display: none
-  &__list
-    padding-left: 1.2rem
-  &__item
-    font-family: 'Futura Book', sans-serif
-    font-size: 1.071rem
-    font-weight: normal
-    color: $gray
-    margin-bottom: 0.6rem
-  &__pricetag
-    display: inline-block
-    box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.3)
-    padding: 1rem 0 1rem 2.357rem
-    text-align: left
-    position: absolute
-    left: 0.15rem
-    bottom: -1.7rem
-    width: 16.286rem
-    height: 3.857rem
-    background-color: $primary
-    color: $light
-    font-family: 'Yeseva One', sans-serif
-    font-size: 1.286rem
-    text-transform: uppercase
-    font-weight: normal
-
-
-  
