--- a/css/style.css
+++ b/css/style.css
@@ -822,30 +822,6 @@ a {
   .hero__instagram {
     max-width: 5.714rem;
     height: 100%; }
-  .hero__scroll-down {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    left: 0;
-    bottom: 0;
-    min-width: 17.643rem;
-    min-height: 6.929rem;
-    margin-bottom: -3.48rem;
-    margin-left: -5.714rem;
-    background-color: #131313;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: #fff; }
-    .hero__scroll-down::after {
-      content: '';
-      width: 30px;
-      height: 30px;
-      border-radius: 50%;
-      border: 2px solid #ff5a3c;
-      background: url("../img/ico/arrow-down.svg") no-repeat center;
-      background-color: transparent;
-      margin-left: 12px; }
 
 .aside {
   display: flex;
@@ -1181,20 +1157,38 @@ a {
       color: #2c2c2d; }
   .cases__slider {
     width: 100%;
-    max-width: 69.4375rem;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding-bottom: 3rem; }
     .cases__slider__button {
-      width: 1.4375rem;
-      height: 2.6875rem; }
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 2rem;
+      height: 3.7391rem; }
     .cases__slider__image__container {
       width: 100%;
       height: 100%;
       max-width: 60.375rem;
-      max-height: 31.625rem; }
+      height: 31.625rem;
+      margin-left: 3.1875rem;
+      margin-right: 3.1875rem;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+
+.slider__button {
+  width: 100%;
+  height: 100%;
+  max-width: 1.4375rem;
+  max-height: 2.6875rem;
+  transition: max-width 0.3s;
+  transition: max-height 0.3s; }
+  .slider__button:hover {
+    max-width: 2rem;
+    max-height: 3.7391rem; }
 
 .footer {
   background: #131313 url("../img/footer-bg.jpg") no-repeat center/cover;
