--- a/sass/templates/_cases.sass
+++ b/sass/templates/_cases.sass
@@ -38,22 +38,40 @@
       line-height: 1.375rem
       text-align: center
       color: #2c2c2d
-
   &__slider
     width: 100%
-    max-width: 69.4375rem
+    // max-width: 69.4375rem
     display: flex
     flex-direction: row
-    justify-content: space-between
+    justify-content: center
     align-items: center
     padding-bottom: 3rem
     &__button
-      width: 1.4375rem
-      height: 2.6875rem
+      display: flex
+      justify-content: center
+      align-items: center
+      width: 2rem
+      height: 3.7391rem
     &__image
       &__container
         width: 100%
         height: 100%
         max-width: 60.375rem
-        max-height: 31.625rem
-
+        height: 31.625rem
+        margin-left: 3.1875rem
+        margin-right: 3.1875rem
+        display: flex
+        justify-content: center
+        align-items: center
+        
+.slider
+  &__button
+    width: 100%
+    height: 100%
+    max-width: 1.4375rem
+    max-height: 2.6875rem
+    transition: max-width 0.3s
+    transition: max-height 0.3s
+    &:hover
+      max-width: 2rem
+      max-height: 3.7391rem
