--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -112,4 +112,18 @@ button, input
 .input.invalid
   background-color: rgba($isInvalid, 0.1)
 
+
+.slider
+  &__button
+    width: 100%
+    height: 100%
+    max-width: 1.4375rem
+    max-height: 2.6875rem
+    transition: max-width 0.3s
+    transition: max-height 0.3s
+    &:hover
+      max-width: 2rem
+      max-height: 3.7391rem
+
+
  
