--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -31,8 +31,11 @@ main
     &:nth-child(3n+3)
       justify-content: flex-end
   &-50
-    flex-basis: 50%
-    max-width: 50%
+    display: flex
+    flex-basis: 35%
+    max-width: 35%
+    flex-direction: row
+    justify-content: flex-end
   &-60
     flex-basis: 60%
     max-width: 60%
