--- a/sass/templates/_cases.sass
+++ b/sass/templates/_cases.sass
@@ -40,7 +40,6 @@
       color: #2c2c2d
   &__slider
     width: 100%
-    // max-width: 69.4375rem
     display: flex
     flex-direction: row
     justify-content: center
@@ -53,6 +52,9 @@
       width: 2rem
       height: 3.7391rem
     &__image
+      display: none
+      &:first-of-type
+        display: block
       &__container
         width: 100%
         height: 100%
@@ -63,7 +65,7 @@
         display: flex
         justify-content: center
         align-items: center
-        
+
 .slider
   &__button
     width: 100%
