--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -9,6 +9,7 @@
   display: flex
   align-items: flex-start
   justify-content: center
+  z-index: 199
   &__container
     display: flex
     justify-content: space-between
