--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -94,10 +94,21 @@ div
     position: absolute
     background-color: rgba(red, 0.3)
     color: $light
+    text-shadow: $dark 0 0 5px
     text-align: center
     padding: 0
     right: 0
     bottom: 0
+    &--modal
+      position: absolute
+      background-color: rgba(red, 0.3)
+      color: $light
+      text-shadow: $dark 0 0 5px
+      text-align: center
+      font-size: 0.8rem
+      padding: 0
+      right: 0
+      bottom: -0.8rem
 .policy
   & > div
     &.invalid
