--- a/sass/templates/_reviews.sass
+++ b/sass/templates/_reviews.sass
@@ -39,6 +39,12 @@
       line-height: 1.375rem
       text-align: center
       color: #2c2c2d
+  &__link
+      color: #2c2c2d
+      text-decoration: none
+      &:hover
+        text-decoration: underline
+        color: $primary
   &__slider
     width: 100%
     display: flex
