--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -1,105 +1,49 @@
 .footer
-  background: $dark url('../img/footer-bg.jpg') no-repeat center / cover
+  background: $light url('../img/bg-img-footer.jpg') no-repeat center / cover
   padding-left: 0
   position: relative
+  padding: 0
   &__container
     position: relative
     margin: 0 auto
-  &__input
-    &--light
-      font-family: 'Futura Book', cursive
-      width: 100%
-      line-height: 1.714rem
-  &__wrap
-    position: relative
-    background-color: $black
-    max-width: 63.071rem
-    margin: auto
-    padding: 2.5rem
-    margin-bottom: 3.714rem
-    margin-top: -27rem
     display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+    width: 100%
+    padding: 4.0625rem 0 3.0625rem 0
+
+  &__logo
+    display: flex
+    flex-direction: column
     justify-content: center
     align-items: center
-    flex-direction: column
-  &__title
-    margin-top: 0
-    text-transform: uppercase
-    font-family: 'Yeseva One', cursive
-    font-weight: normal
-    font-style: normal
-    font-size: 1.428rem
-    text-align: center
-    margin-bottom: 3.214rem
-  &__form
     margin: 0
-    max-width: 36.928rem
-    display: flex
-    justify-content: space-between
-    flex-wrap: wrap
-  &__input-group
-    position: relative
-    display: flex
-    flex-direction: column
-    max-width: 16.5rem
-    flex-basis: 50%
-    margin-bottom: 3.2rem
-    &--full-width
-      flex-basis: 100%
-      max-width: 36.928rem
-      & > .form__input
-        padding-top: 0
-    &:nth-of-type(3)
-      margin-bottom: 1.8rem
-  &__policy
-    position: relative
-    flex-basis: 100%
-    margin-bottom: 3.5rem
-  &__button
-    margin: auto
-  &__heading
-    display: block
-    margin: auto
-    margin-bottom: 1.857rem
-    text-transform: uppercase
-    color: $primary
-    font-family: 'Yeseva One', cursive
-    font-size: 1.429rem
-    text-align: center
-    max-width: 38rem
-  &__menu
+    &__img
+      margin: 0
+      margin-bottom: 0.75rem
+      max-width: 3.625rem
+      max-height: 3.625rem
+      width: 100%
+      height: 100%
+    &__mark
+      margin: 0
+      margin-bottom: 2.5rem
+      font-family: 'Ubuntu', serif
+      font-size: 1.625rem
+      font-weight: 700
+      color: #38393b
+  &__horizontal-line
+    background-color: #3c3a3a
     width: 100%
-    background-color: $dark
-    padding: 3.429rem 0
-  &__icons
-    display: flex
-    justify-content: center
-    margin-bottom: 3.071rem
-    &-wrap
-      &--e-mail
-        width: 28px
-        height: 28px
-        background: $primary url('../img/ico/e-mail-ico.svg') no-repeat center
-        border-radius: 50%
-        margin-right: 1.071rem
-        &:hover
-          box-shadow: 0px 5px 15px rgba($primary, .2)
-      &--insta
-        width: 28px
-        height: 28px
-        background: $primary url('../img/ico/insta-ico.svg') no-repeat center
-        border-radius: 50%
-        &:hover
-          box-shadow: 0px 5px 15px rgba($primary, .2)
-  &__map
-    margin: 0 auto 4.643rem auto
-  &__phone
-    color: $primary
-    &:hover
-      text-shadow: 0px 5px 15px rgba($primary, .3)
-
-.map
-  max-width: 66.071rem
-  max-height: 33.214rem
+    max-width: 54.125rem
+    height: 3px
+    margin-bottom: 3rem
+  &__copyrights
+    margin: 0
+    font-family: 'Ubuntu', serif
+    font-size: 1rem
+    font-weight: 500
+    color: #151515
 
 
